src/objects/Loan__c.object
<CustomObject>
    <fields>
        <fullName>Loan_Tranche__c</fullName>
        <label>Loan Tranche</label>
        <referenceTo>Loan_Traunch__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maturity_Date_Month_Day__c</fullName>
        <formula>CASE(MONTH(Maturity_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp;&quot; &quot;&amp;TEXT(DAY(Maturity_Date__c))</formula>
        <label>Maturity Date (Month Day)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date_Year__c</fullName>
        <formula>RIGHT(TEXT(YEAR(Maturity_Date__c)),2)</formula>
        <inlineHelpText>Used by DocuSign</inlineHelpText>
        <label>Maturity Date (Year)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <formula>Opportunity__r.Maturity_Date2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_FICO__c</fullName>
        <description>Max of Co-Applicant and Applicant FICO scores</description>
        <formula>Opportunity__r.Max_FICO__c</formula>
        <inlineHelpText>Max of Co-Applicant and Applicant FICO scores</inlineHelpText>
        <label>Max FICO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthLT__c</fullName>
        <formula>Loan_Tranche__r.MonthLD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_of_Loan_Purchase__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Month of Loan Purchase</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Payment__c</fullName>
        <formula>Opportunity__r.Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows original monthly payment in the P&amp;I period, disregarding any principal paydowns</inlineHelpText>
        <label>Original Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Due_Date__c</fullName>
        <label>XXX Next Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Outstanding__c</fullName>
        <formula>today() -  Last_Due_Date_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Past_Due__c</fullName>
        <inlineHelpText>This is populated with data from LD reporting</inlineHelpText>
        <label>Number of Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used by emails with form assembly links</inlineHelpText>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <description>Supports the T-Rex data export</description>
        <formula>text( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXX Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by LoanHandler when the Loan&apos;s Lead is converted to an Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by LoanHandler when the Loan is created from a Lead</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Balance_Plus_Unadvanced_Funds__c</fullName>
        <description>Used for loan sales data on loans that are not yet fully disbursed</description>
        <formula>Principal_Balance__c +   Total_Funds_Not_Yet_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Balance Plus Unadvanced Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Balance__c</fullName>
        <description>This is a formula field that calculates the current principal balance as Principal - Principal Paid - Total Funds Not Yet Disbursed as recorded in salesforce.  The system of record for principal paid and loan balances is Lease Dimensions.</description>
        <formula>Principal__c -  Principal_Paid__c-  Total_Funds_Not_Yet_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula field that calculates the current principal balance as Principal - Principal Paid - Total Funds Not Yet Disbursed as recorded in salesforce.  The system of record for principal paid and loan balances is Lease Dimensions.</inlineHelpText>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Balance_rounded__c</fullName>
        <formula>round( Principal_Balance__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Paid__c</fullName>
        <description>This is a roll-up summary of the Principal Payment field from the Loan Payment object.  It represents the sum of principal paid to date according to salesforce.  The system of record for this information is Lease Dimensions.</description>
        <inlineHelpText>This is a roll-up summary of the Principal Payment field from the Loan Payment object.  It represents the sum of principal paid to date according to salesforce.  The system of record for this information is Lease Dimensions.</inlineHelpText>
        <label>Principal Paid</label>
        <summarizedField>Loan_Payment__c.Principal_Payment__c</summarizedField>
        <summaryForeignKey>Loan_Payment__c.Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Principal_Paid_rounded__c</fullName>
        <formula>round(Principal_Paid__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal__c</fullName>
        <description>Formula that adds up the requested loan amount,  financing fee, and loan fee 1.  This is the starting principal balance on the loan.</description>
        <formula>Requested_Loan_Amount__c +  Financing_Fee__c + Loan_Fee_1_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula that adds up the requested loan amount, financing fee, and loan fee 1.  This is the starting principal balance on the loan.</inlineHelpText>
        <label>Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_and_Interest_Period_DOER__c</fullName>
        <defaultValue>120</defaultValue>
        <label>Principal and Interest Period (DOER)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principall__c</fullName>
        <label>XXX Principal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Product record assigned to this loan.  The designated Product informs key loan determinants (e.g. interest rate, term, form of promissory note).</description>
        <inlineHelpText>This is a lookup to the Product record assigned to this loan.  The designated Product informs key loan determinants (e.g. interest rate, term, form of promissory note).</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Account that is the Profit Center associated with this loan. It is selected by the Partner in the SLP when they submit the Invoice</description>
        <inlineHelpText>This is a lookup field to the Account that is the Profit Center associated with this loan. It is selected by the Partner in the SLP when they submit the Invoice</inlineHelpText>
        <label>Profit Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Amount__c</fullName>
        <inlineHelpText>This represents the amount of the system cost that is being financed by Bluewave.</inlineHelpText>
        <label>Requested Loan Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Aggregator__c</fullName>
        <defaultValue>&quot;BlueWave/SolSystems&quot;</defaultValue>
        <description>The current aggregator of the account. Will default to &quot;BlueWave/SolSystems&quot; when created.</description>
        <label>SREC Aggregator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SREC_Product__c</fullName>
        <formula>Opportunity__r.SREC_Product__r.Name</formula>
        <label>SREC Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set by LoanHandler when creating the Loan from the Lead</inlineHelpText>
        <label>Sales Agent</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>Second Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sixth_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>Sixth Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>State abbreviation set by LoanHandler when creating the Loan from the Lead (original field is Lead.LASERCA__Home_State__c, used by the Credit Check).</inlineHelpText>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Cost__c</fullName>
        <formula>Opportunity__r.Loan_Principle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This represents the cost of the system installed. It may not be equal to the requested loan amount.</inlineHelpText>
        <label>XXX System Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Costt__c</fullName>
        <inlineHelpText>The request loan amount (could be different than the true system cost)</inlineHelpText>
        <label>XXX System Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Nameplate_Capacity_kW__c</fullName>
        <formula>Opportunity__r.System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Nameplate Capacity (kW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technology_Platform_Fee__c</fullName>
        <formula>Product__r.Technology_Platform_Fee__c * Requested_Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula that calculates Technology Platform Fee from the Product&apos;s TPF * Requested Loan Amount</inlineHelpText>
        <label>Technology Platform Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <formula>Product__r.Loan_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Loan Term from the related Product, for convenience</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Adjustable_Monthly_Payment_Amount__c</fullName>
        <label>Third Adjustable Monthly Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Times_Delinquent_121_Days__c</fullName>
        <inlineHelpText>This is populated with data from Lease Dimensions</inlineHelpText>
        <label>Times Delinquent 121+ Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Delinquent_31_60_Days__c</fullName>
        <inlineHelpText>This is populated with data from Lease Dimensions</inlineHelpText>
        <label>Times Delinquent 31-60 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Delinquent_61_90_Days__c</fullName>
        <inlineHelpText>This is populated with data from Lease Dimensions.</inlineHelpText>
        <label>Times Delinquent 61-90 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_Delinquent_91_120_Days__c</fullName>
        <inlineHelpText>This is populated with data from Lease Dimensions</inlineHelpText>
        <label>Times Delinquent 91-120 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Delinquent_Amount_due__c</fullName>
        <inlineHelpText>This is populated with data from Lease Dimensions</inlineHelpText>
        <label>Total Delinquent Amount due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Funds_Disbursed__c</fullName>
        <label>Total Funds Disbursed</label>
        <summarizedField>Disbursal__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Disbursal__c.Status__c</field>
            <operation>equals</operation>
            <value>Disbursed</value>
        </summaryFilterItems>
        <summaryForeignKey>Disbursal__c.Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Funds_Not_Yet_Disbursed__c</fullName>
        <label>Total Funds Not Yet Disbursed</label>
        <summarizedField>Disbursal__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Disbursal__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Disbursed</value>
        </summaryFilterItems>
        <summaryForeignKey>Disbursal__c.Loan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_IRBD_Paid__c</fullName>
        <formula>IF(AND(NOT(ISBLANK( IRBD_Interest_Only_Date_Received__c)), ISBLANK(IRBD_Principal_Interest_Date_Received__c)), IRBD_Interest_Only__c , 

IF(AND(NOT(ISBLANK( IRBD_Interest_Only_Date_Received__c)), NOT(ISBLANK(IRBD_Principal_Interest_Date_Received__c))), IRBD_Principal_interest__c + IRBD_Interest_Only__c, 

null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total IRBD Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Loan_Payments_Override__c</fullName>
        <inlineHelpText>Populated with Apex to show the total loan payments for the adjustable rate loan. Is it used as an override field for the Total Loan Payments field on the opportunity, which is used in docusign.</inlineHelpText>
        <label>Total Loan Payments Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Assignment__c</fullName>
        <label>Tranche Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                    <default>true</default>
                    <label>Automatic</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unadvanced_Funds__c</fullName>
        <formula>Requested_Loan_Amount__c  - Disbursal_Full_Install__c - Disbursal_Mechanical_Installation__c - Disbursal_Contract_Signature__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XXUnadvanced Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>LoanHandler uses to assign tranches and MCEC reporting</inlineHelpText>
        <label>Unique ID</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Update_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X25_BPS_Eligible__c</fullName>
        <description>Checkbox is true if the loan is assigned one of the five products that were eligible for the Avidia .25 BPS reduction.</description>
        <formula>Product__r.X25_BPS_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checkbox is true if the loan is assigned one of the five products that were eligible for the Avidia .25 BPS reduction.</inlineHelpText>
        <label>25 BPS Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60_Delinquency_Explanation__c</fullName>
        <label>60+ Delinquency Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X60_day_delinquency_category__c</fullName>
        <label>60+ Delinquency Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Servicer Transition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XXXTechnology_Platform_Fee__c</fullName>
        <label>XXX Technology Platform Fee</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearLT__c</fullName>
        <formula>Loan_Tranche__r.YearLD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_due_date__c</fullName>
        <label>Last Due Date</label>
        <summarizedField>Loan_Payment__c.Payment_Due_Date2__c</summarizedField>
        <summaryForeignKey>Loan_Payment__c.Loan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xxLeadID__c</fullName>
        <formula>Opportunity__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxLeadID</label>
        <type>Text</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>Loans_by_Date</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Loan_Portfolio__c</columns>
        <columns>Product__c</columns>
        <columns>Partner__c</columns>
        <columns>Sales_Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Number__c</field>
            <operation>equals</operation>
            <value>BW0024388</value>
        </filters>
        <label>Loans by Date</label>
    </listViews>
    <listViews>
        <fullName>Paid_Off_Loans</fullName>
        <booleanFilter>((1 OR (2 AND 3)) AND 4)</booleanFilter>
        <columns>RECORDTYPE</columns>
        <columns>Loan_Number__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Principal_Balance__c</columns>
        <columns>Loan_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Status__c</field>
            <operation>equals</operation>
            <value>Paid Off</value>
        </filters>
        <filters>
            <field>Principal_Balance__c</field>
            <operation>lessOrEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Opportunity_Stage__c</field>
            <operation>equals</operation>
            <value>complete</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>test,duplicate</value>
        </filters>
        <label>Paid Off Loans</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <recordTypes>
        <fullName>Loan</fullName>
        <active>true</active>
        <label>Loan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Loan_DOER</fullName>
        <active>true</active>
        <label>Loan - DOER</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>